--- a/recipes-connectivity/networkmanager/networkmanager/NetworkManager.conf
+++ b/recipes-connectivity/networkmanager/networkmanager/NetworkManager.conf
@@ -6,6 +6,9 @@ autoconnect-retries-default=0
 [ifupdown]
 managed=true
 
+[keyfile]
+unmanaged-devices=interface-name:!eth0;interface-name:!wlan0
+
 [device]
 wps-method=default
 
