--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -19,3 +19,4 @@ BBMASK .= "|poky/meta/recipes-core/volatile-binds/volatile-binds.bb"
 BBMASK .= "|meta-openembedded/meta-oe/recipes-devtools/giflib/giflib_5.1.4.bb"
 BBMASK .= "|poky/meta/recipes-graphics/jpeg/libjpeg-turbo_2.1.4.bb"
 BBMASK .= "|meta-rdk-oss-reference/recipes-devtools/perl/perl_%.bbappend"
+BBMASK .= "|meta-openembedded/meta-networking/recipes-support/dnsmasq/dnsmasq_2.90.bb"
