RDKOSS-371:Changes required in meta-rdk-oss-reference
Signed-off-by: Arjun <arjun_daasuramdass@comcast.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -19,3 +19,18 @@ BBMASK .= "|poky/meta/recipes-core/volatile-binds/volatile-binds.bb"
 BBMASK .= "|meta-openembedded/meta-oe/recipes-devtools/giflib/giflib_5.1.4.bb"
 BBMASK .= "|poky/meta/recipes-graphics/jpeg/libjpeg-turbo_2.1.4.bb"
 BBMASK .= "|meta-rdk-oss-reference/recipes-devtools/perl/perl_%.bbappend"
+BBMASK .= "|meta-rdk-comcast/recipes-core/systemd/systemd_250.5.bbappend"
+BBMASK .= "|meta-rdk-comcast-broadband/recipes-core/systemd/systemd_%.bbappend"
+BBMASK .= "|meta-rdk/recipes-common/safec/safec_%.bbappend"
+BBMASK .= "|meta-rdk-comcast/recipes-connectivity/ndisc6/ndisc6_%.bbappend"
+BBMASK .= "|meta-rdk-comcast/recipes-support/ca-certificates/ca-certificates_%.bbappend" 
+BBMASK .= "|meta-rdk-comcast/recipes-connectivity/dibbler/dibbler_git.bbappend"
+BBMASK .= "|meta-rdk-comcast/recipes-common/lighttpd/lighttpd_%.bbappend" 
+BBMASK .= "|meta-rdk-comcast-broadband/recipes-common/bash/bash_%.bbappend"
+BBMASK .= "|meta-rdk-comcast/recipes-devtools/breakpad/breakpad_git.bbappend" 
+BBMASK .= "|meta-rdk-comcast/recipes-tweaks/breakpad/breakpad_git.bbappend"
+BBMASK .= "|meta-rdk-comcast/recipes-core/glib-2.0/glib-2.0_2.7%.bbappend"
+BBMASK .= "|meta-rdk-broadband/recipes-support/libsoup/libsoup-2.4_2.74.2.bbappend" 
+BBMASK .= "|meta-rdk-comcast/recipes-support/stunnel/stunnel_%.bbappend" 
+BBMASK .= "|meta-rdk/recipes-extended/rpcbind/rpcbind_1.2.%.bbappend"
+BBMASK .= "|meta-rdk-comcast/recipes-connectivity/bind/bind_%.bbappend"
