--- a/recipes-connectivity/networkmanager/networkmanager/95-logging.conf
+++ b/recipes-connectivity/networkmanager/networkmanager/95-logging.conf
@@ -3,6 +3,7 @@ level=INFO
 domains=ALL
 
 [connectivity]
-uri=http://connectivity-check.ubuntu.com/
-interval=300
 enabled=true
+uri=http://nmcheck.gnome.org/check_network_status.txt
+interval=120
+response="NetworkManager is online"
