--- a/recipes-connectivity/networkmanager/networkmanager/95-logging.conf
+++ b/recipes-connectivity/networkmanager/networkmanager/95-logging.conf
@@ -4,6 +4,6 @@ domains=ALL
 
 [connectivity]
 enabled=true
-uri=http://nmcheck.gnome.org/check_network_status.txt
-interval=120
-response="NetworkManager is online"
+uri=http://connectivity-check.ubuntu.com/
+interval=10
+response=
