--- a/recipes-connectivity/networkmanager/networkmanager/95-logging.conf
+++ b/recipes-connectivity/networkmanager/networkmanager/95-logging.conf
@@ -4,6 +4,6 @@ domains=ALL
 
 [connectivity]
 enabled=true
-uri=http://connectivity-check.ubuntu.com/
+uri=http://connectivitycheck.comcast.com/generate_204
 interval=10
 response=
