--- a/recipes-connectivity/networkmanager/networkmanager/NetworkManager.conf
+++ b/recipes-connectivity/networkmanager/networkmanager/NetworkManager.conf
@@ -15,3 +15,8 @@ wifi.scan-rand-mac-address=no
 ethernet.cloned-mac-address=preserve
 wifi.cloned-mac-address=preserve
 
+[connectivity]
+enabled=true
+uri=http://connectivitycheck.comcast.com/generate_204
+interval=10
+response=
