Temporary masking of breakpad-wrapper

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -19,6 +19,7 @@ BBMASK .= "|poky/meta/recipes-core/volatile-binds/volatile-binds.bb"
 BBMASK .= "|meta-openembedded/meta-oe/recipes-devtools/giflib/giflib_5.1.4.bb"
 BBMASK .= "|poky/meta/recipes-graphics/jpeg/libjpeg-turbo_2.1.4.bb"
 BBMASK .= "|meta-rdk-oss-reference/recipes-devtools/perl/perl_%.bbappend"
+BBMASK .= "|meta-rdk-oss-reference/recipes-rdk/breakpad_wrapper/breakpad-wrapper.bb"
 BBMASK .= "|meta-rdk-comcast/recipes-core/systemd/systemd_250.5.bbappend"
 BBMASK .= "|meta-rdk-comcast-broadband/recipes-core/systemd/systemd_%.bbappend"
 BBMASK .= "|meta-rdk/recipes-common/safec/safec_%.bbappend"
