RDKBACCL-1002 : Set bitbake symbols and DISTRO

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,7 +11,7 @@ BBFILE_COLLECTIONS += "oss-reference"
 BBFILE_PATTERN_oss-reference := "^${LAYERDIR}/"
 BBFILE_PRIORITY_oss-reference = "6"
 
-LAYERSERIES_COMPAT_oss-reference = "dunfell kirkstone"
+LAYERSERIES_COMPAT_oss-reference = "dunfell kirkstone scarthgap"
 LAYERDEPENDS_oss-reference = "core multimedia-layer"
 
 BBMASK .= "|poky/meta/recipes-core/os-release/os-release.bb"
