--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -20,5 +20,5 @@ BBMASK .= "|meta-openembedded/meta-oe/recipes-devtools/giflib/giflib_5.1.4.bb"
 BBMASK .= "|poky/meta/recipes-graphics/jpeg/libjpeg-turbo_2.1.4.bb"
 BBMASK .= "|meta-rdk-oss-reference/recipes-devtools/perl/perl_%.bbappend"
 
-DISTRO_FEATURES:append = " ptest
+DISTRO_FEATURES:append = " ptest"
 EXTRA_IMAGE_FEATURES += "ptest-pkgs"
