--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -22,3 +22,30 @@ BBMASK .= "|meta-rdk-oss-reference/recipes-devtools/perl/perl_%.bbappend"
 
 DISTRO_FEATURES:append = " ptest"
 EXTRA_IMAGE_FEATURES += "ptest-pkgs"
+PTEST_EXCLUDE += "openssl"
+IMAGE_INSTALL:remove = "openssl-ptest"
+RDEPENDS:remove:pn-core-image-ptest = "openssl-ptest"
+PTESTS_REMOVE:pn-core-image-ptest = "openssl"
+PTEST_EXCLUDE += "busybox"
+IMAGE_INSTALL:remove = "busybox-ptest"
+RDEPENDS:remove:pn-core-image-ptest = "busybox-ptest"
+PTESTS_REMOVE:pn-core-image-ptest = "busybox"
+
+PTESTS_REMOVE:pn-core-image-ptest = "acl libcap shadow coreutils attr slang bluez5 glib-2.0 libpcre bzip2 make diffutils elfutils binutils-symlinks ethtool syslog-ng flex gawk gettext gzip grep wayland libxml2 make m4 opkg binutils parted quilt findutils apr util-linux bc apr lttng-tools-ptest lttng-modules make-mod-scripts"
+IMAGE_INSTALL:remove = "acl-ptest libcap-ptest shadow-ptest coreutils-ptest attr-ptest slang-ptest bluez5-ptest glib-2.0-ptest libpcre-ptest bzip2-ptest make-ptest diffutils-ptest elfutils-ptest binutils-symlinks ethtool-ptest syslog-ng-ptest  flex-ptest gawk-ptest gettext-ptest gzip-ptest grep-ptest wayland-ptest libxml2-ptest m4-ptest opkg-ptest parted-ptest quilt-ptest findutils-ptest apr-util-ptest apr-ptest lttng-tools-ptest"
+RDEPENDS:remove:pn-core-image-ptest = "acl-ptest libcap-ptest shadow-ptest coreutils-ptest attr-ptest slang-ptest bluez5-ptest glib-2.0-ptest libpcre-ptest bzip2-ptest make-ptest diffutils-ptest elfutils-ptest binutils-symlinks ethtool-ptest syslog-ng-ptest flex-ptest gawk-ptest gettext-ptest gzip-ptest grep-ptest wayland-ptest libxml2-ptest m4-ptest opkg-ptest parted-ptest quilt-ptest findutils-ptest apr-util-ptest apr-ptest lttng-tools-ptest"
+
+PREFERRED_VERSION_libarchive = "3.6.2"
+PREFERRED_VERSION_gdbm = "1.23"
+#PREFERRED_VERSION_gdbm = "1.23"
+PREFERRED_VERSION_sed = "4.8"
+PREFERRED_VERSION_gmp = "6.2.1"
+CFLAGS:append = " -Wno-error=format-overflow"
+INSANE_SKIP:pn-zlib = "ldflags"
+KERNEL_SRC = "${STAGING_KERNEL_DIR}"
+PTEST_ENABLED:pn-bluez5 = "0"
+#LDFLAGS:append = " Wl,-hash-style=gnu"
+CLEANBROKEN_pn-make-mod-scripts = "1"
+CFLAGS:append = " -DGid_t_size=4"
+PREFERRED_PROVIDER_virtual/kernel = "linux-rdk"
+
