--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -48,4 +48,6 @@ PTEST_ENABLED:pn-bluez5 = "0"
 CLEANBROKEN_pn-make-mod-scripts = "1"
 CFLAGS:append = " -DGid_t_size=4"
 PREFERRED_PROVIDER_virtual/kernel = "linux-rdk"
+PREFERRED_VERSION_gdbm = "1.23"
+
 
