--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -33,7 +33,7 @@ PTESTS_REMOVE:pn-core-image-ptest = "busybox"
 
 PTESTS_REMOVE:pn-core-image-ptest = "acl libcap shadow coreutils attr slang bluez5 glib-2.0 libpcre bzip2 make diffutils elfutils binutils-symlinks ethtool syslog-ng flex gawk gettext gzip grep wayland libxml2 make m4 opkg binutils parted quilt findutils apr util-linux bc apr lttng-tools-ptest lttng-modules make-mod-scripts"
 IMAGE_INSTALL:remove = "acl-ptest libcap-ptest shadow-ptest coreutils-ptest attr-ptest slang-ptest bluez5-ptest glib-2.0-ptest libpcre-ptest bzip2-ptest make-ptest diffutils-ptest elfutils-ptest binutils-symlinks ethtool-ptest syslog-ng-ptest  flex-ptest gawk-ptest gettext-ptest gzip-ptest grep-ptest wayland-ptest libxml2-ptest m4-ptest opkg-ptest parted-ptest quilt-ptest findutils-ptest apr-util-ptest apr-ptest lttng-tools-ptest"
-RDEPENDS:remove:pn-core-image-ptest = "acl-ptest libcap-ptest shadow-ptest coreutils-ptest attr-ptest slang-ptest bluez5-ptest glib-2.0-ptest libpcre-ptest bzip2-ptest make-ptest diffutils-ptest elfutils-ptest binutils-symlinks ethtool-ptest syslog-ng-ptest flex-ptest gawk-ptest gettext-ptest gzip-ptest grep-ptest wayland-ptest libxml2-ptest m4-ptest opkg-ptest parted-ptest quilt-ptest findutils-ptest apr-util-ptest apr-ptest lttng-tools-ptest"
+RDEPENDS:remove:pn-core-image-ptest = "acl-ptest libcap-ptest shadow-ptest coreutils-ptest attr-ptest slang-ptest bluez5-ptest glib-2.0-ptest libpcre-ptest bzip2-ptest make-ptest diffutils-ptest elfutils-ptest binutils-symlinks ethtool-ptest syslog-ng-ptest flex-ptest gawk-ptest gettext-ptest gzip-ptest grep-ptest wayland-ptest libxml2-ptest m4-ptest opkg-ptest parted-ptest quilt-ptest findutils-ptest apr-util-ptest apr-ptest lttng-tools-ptest gdbm-ptest"
 
 PREFERRED_VERSION_libarchive = "3.6.2"
 PREFERRED_VERSION_gdbm = "1.23"
@@ -48,6 +48,3 @@ PTEST_ENABLED:pn-bluez5 = "0"
 CLEANBROKEN_pn-make-mod-scripts = "1"
 CFLAGS:append = " -DGid_t_size=4"
 PREFERRED_PROVIDER_virtual/kernel = "linux-rdk"
-PREFERRED_VERSION_gdbm = "1.23"
-
-
