--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -30,6 +30,7 @@ PTEST_EXCLUDE += "busybox"
 IMAGE_INSTALL:remove = "busybox-ptest"
 RDEPENDS:remove:pn-core-image-ptest = "busybox-ptest"
 PTESTS_REMOVE:pn-core-image-ptest = "busybox"
+PTESTS_REMOVE:pn-core-image-ptest = "gdbm"
 
 PTESTS_REMOVE:pn-core-image-ptest = "acl libcap shadow coreutils attr slang bluez5 glib-2.0 libpcre bzip2 make diffutils elfutils binutils-symlinks ethtool syslog-ng flex gawk gettext gzip grep wayland libxml2 make m4 opkg binutils parted quilt findutils apr util-linux bc apr lttng-tools-ptest lttng-modules make-mod-scripts"
 IMAGE_INSTALL:remove = "acl-ptest libcap-ptest shadow-ptest coreutils-ptest attr-ptest slang-ptest bluez5-ptest glib-2.0-ptest libpcre-ptest bzip2-ptest make-ptest diffutils-ptest elfutils-ptest binutils-symlinks ethtool-ptest syslog-ng-ptest  flex-ptest gawk-ptest gettext-ptest gzip-ptest grep-ptest wayland-ptest libxml2-ptest m4-ptest opkg-ptest parted-ptest quilt-ptest findutils-ptest apr-util-ptest apr-ptest lttng-tools-ptest"
