--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -49,3 +49,5 @@ PTEST_ENABLED:pn-bluez5 = "0"
 CLEANBROKEN_pn-make-mod-scripts = "1"
 CFLAGS:append = " -DGid_t_size=4"
 PREFERRED_PROVIDER_virtual/kernel = "linux-rdk"
+
+IMAGE_INSTALL_remove = "gdbm-ptest"
