--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -50,4 +50,4 @@ CLEANBROKEN_pn-make-mod-scripts = "1"
 CFLAGS:append = " -DGid_t_size=4"
 PREFERRED_PROVIDER_virtual/kernel = "linux-rdk"
 
-IMAGE_INSTALL_remove = "gdbm-ptest"
+IMAGE_INSTALL:remove = "gdbm-ptest"
