--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -51,3 +51,8 @@ CFLAGS:append = " -DGid_t_size=4"
 PREFERRED_PROVIDER_virtual/kernel = "linux-rdk"
 
 IMAGE_INSTALL:remove = "gdbm-ptest sed-ptest"
+
+# Exclude make (GPL-3.0) and anything pulling it in
+PTESTS_REMOVE:pn-core-image-ptest = "make gdk-pixbuf"
+IMAGE_INSTALL:remove = "make-ptest gdk-pixbuf-ptest"
+RDEPENDS:remove:pn-core-image-ptest = "make-ptest gdk-pixbuf-ptest"
