--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -36,11 +36,11 @@ PTESTS_REMOVE:pn-core-image-ptest = "acl libcap shadow coreutils attr slang blue
 IMAGE_INSTALL:remove = "acl-ptest libcap-ptest shadow-ptest coreutils-ptest attr-ptest slang-ptest bluez5-ptest glib-2.0-ptest libpcre-ptest bzip2-ptest make-ptest diffutils-ptest elfutils-ptest binutils-symlinks ethtool-ptest syslog-ng-ptest  flex-ptest gawk-ptest gettext-ptest gzip-ptest grep-ptest wayland-ptest libxml2-ptest m4-ptest opkg-ptest parted-ptest quilt-ptest findutils-ptest apr-util-ptest apr-ptest lttng-tools-ptest"
 RDEPENDS:remove:pn-core-image-ptest = "acl-ptest libcap-ptest shadow-ptest coreutils-ptest attr-ptest slang-ptest bluez5-ptest glib-2.0-ptest libpcre-ptest bzip2-ptest make-ptest diffutils-ptest elfutils-ptest binutils-symlinks ethtool-ptest syslog-ng-ptest flex-ptest gawk-ptest gettext-ptest gzip-ptest grep-ptest wayland-ptest libxml2-ptest m4-ptest opkg-ptest parted-ptest quilt-ptest findutils-ptest apr-util-ptest apr-ptest lttng-tools-ptest gdbm-ptest"
 
-PREFERRED_VERSION_libarchive = "3.6.2"
-PREFERRED_VERSION_gdbm = "1.23"
-#PREFERRED_VERSION_gdbm = "1.23"
-PREFERRED_VERSION_sed = "4.8"
-PREFERRED_VERSION_gmp = "6.2.1"
+PREFERRED_VERSION:libarchive = "3.6.2"
+PREFERRED_VERSION:gdbm = "1.23"
+#PREFERRED_VERSION:gdbm = "1.23"
+PREFERRED_VERSION:sed = "4.8"
+PREFERRED_VERSION:gmp = "6.2.1"
 CFLAGS:append = " -Wno-error=format-overflow"
 INSANE_SKIP:pn-zlib = "ldflags"
 KERNEL_SRC = "${STAGING_KERNEL_DIR}"
@@ -48,11 +48,6 @@ PTEST_ENABLED:pn-bluez5 = "0"
 #LDFLAGS:append = " Wl,-hash-style=gnu"
 CLEANBROKEN_pn-make-mod-scripts = "1"
 CFLAGS:append = " -DGid_t_size=4"
-PREFERRED_PROVIDER_virtual/kernel = "linux-rdk"
+PREFERRED_PROVIDER:virtual/kernel = "linux-rdk"
 
-IMAGE_INSTALL:remove = "gdbm-ptest sed-ptest"
-
-# Exclude make (GPL-3.0) and anything pulling it in
-PTESTS_REMOVE:pn-core-image-ptest = "make gdk-pixbuf"
-IMAGE_INSTALL:remove = "make-ptest gdk-pixbuf-ptest"
-RDEPENDS:remove:pn-core-image-ptest = "make-ptest gdk-pixbuf-ptest"
+#IMAGE_INSTALL:remove = "gdbm-ptest sed-ptest
