--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -51,3 +51,6 @@ CFLAGS:append = " -DGid_t_size=4"
 PREFERRED_PROVIDER:virtual/kernel = "linux-rdk"
 
 IMAGE_INSTALL:remove = "gdbm-ptest sed-ptest"
+
+LICENSE_FLAGS:ACCEPTED += "commercial"
+INCOMPATIBLE_LICENSE:remove = "GPL-3.0-only"
