--- a/recipes-connectivity/networkmanager/networkmanager/NetworkManager.conf
+++ b/recipes-connectivity/networkmanager/networkmanager/NetworkManager.conf
@@ -16,3 +16,7 @@ wifi.scan-rand-mac-address=no
 ethernet.cloned-mac-address=preserve
 wifi.cloned-mac-address=preserve
 
+
+#feature/NetworkManagerConf_oss_ipk
+#VKP: from MW ipks
+
