test NM conf is from MW ipks
Signed-off-by: Vamsi Krishna Palla <vamsikrishna.palla@sky.uk>

--- a/recipes-connectivity/networkmanager/networkmanager/NetworkManager.conf
+++ b/recipes-connectivity/networkmanager/networkmanager/NetworkManager.conf
@@ -16,3 +16,5 @@ wifi.scan-rand-mac-address=no
 ethernet.cloned-mac-address=preserve
 wifi.cloned-mac-address=preserve
 
+#feature/NetworkManagerConf_oss_ipk_oss_4_7_5
+#VKP: from MW ipks
