--- a/recipes-support/dnsmasq/dnsmasq/dnsmasq.service
+++ b/recipes-support/dnsmasq/dnsmasq/dnsmasq.service
@@ -7,7 +7,7 @@ Type=forking
 PIDFile=/run/dnsmasq.pid
 ExecStartPre=-/bin/mkdir -p /var/lib/misc
 ExecStart=/bin/busybox sh -c /lib/rdk/dnsmasqLauncher.sh
-ExecStartPost=/bin/sh -c '[ -f /lib/rdk/logMilestone.sh ] && /bin/sh /lib/rdk/logMilestone.sh "DNSMASQ_STARTED"'
+ExecStartPost=/bin/sh -c '[ -f /lib/rdk/logMilestone.sh ] && /bin/sh -c /usr/bin/rdkLogMileStone "DNSMASQ_STARTED"'
 ExecReload=/bin/kill -USR1 $(/bin/cat /run/dnsmasq.pid)
 TimeoutStartSec=5s
 Restart=always
