RDKTV-38107: Disable syslog-ng service
Add condition to check for syslog-ng disable flag

--- a/recipes-support/syslog-ng/files/syslog-ng.service
+++ b/recipes-support/syslog-ng/files/syslog-ng.service
@@ -6,6 +6,7 @@ After=previous-log-backup.service
 After=tmp.mount
 Requires=tmp.mount
 DefaultDependencies=no
+ConditionPathExists=/etc/disable-syslog-ng.flag
 
 [Service]
 ExecStartPre=/bin/mkdir -p /tmp/syslog-ng
