RDK-59422: Provide Build to test with dns64 Proxy enabled
Signed-off-by: Muhammed Rafi C <muhammed_rafi@comcast.com>

--- a/recipes-connectivity/networkmanager/networkmanager/NetworkManager.conf
+++ b/recipes-connectivity/networkmanager/networkmanager/NetworkManager.conf
@@ -1,7 +1,8 @@
 [main]
 plugins=ifupdown,keyfile
 autoconnect-retries-default=0
-dns=dnsmasq
+dns=none
+rc-manager=unmanaged
 
 [ifupdown]
 managed=true
